iprules.v4
# Generated by iptables-save v1.8.7 on Thu Apr 18 16:01:08 2024
# ALLOW 92.29
# ALLOW 86.167
# ALLOW 86.178
# ALLOW 139.222

*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -s 2.58.0.0/16 -j DROP

-A INPUT -s 4.151.0.0/16 -j DROP
-A INPUT -s 4.255.0.0/16 -j DROP

-A INPUT -s 5.252.0.0/16 -j DROP

-A INPUT -s 8.211.0.0/16 -j DROP

-A INPUT -s 13.91.0.0/16 -j DROP

-A INPUT -s 20.14.0.0/16 -j DROP
-A INPUT -s 20.65.0.0/16 -j DROP
-A INPUT -s 20.118.0.0/16 -j DROP
-A INPUT -s 20.225.0.0/16 -j DROP

-A INPUT -s 23.176.0.0/16 -j DROP

-A INPUT -s 34.71.0.0/16 -j DROP

-A INPUT -s 37.120.0.0/16 -j DROP

-A INPUT -s 35.237.0.0/16 -j DROP

-A INPUT -s 40.83.0.0/16 -j DROP

-A INPUT -s 45.55.0.0/16 -j DROP
-A INPUT -s 45.83.0.0/16 -j DROP
-A INPUT -s 45.128.0.0/16 -j DROP
-A INPUT -s 45.135.0.0/16 -j DROP
-A INPUT -s 45.227.0.0/16 -j DROP

-A INPUT -s 47.203.0.0/16 -j DROP

-A INPUT -s 48.216.0.0/16 -j DROP

-A INPUT -s 49.12.0.0/16 -j DROP

-A INPUT -s 51.15.0.0/16 -j DROP
-A INPUT -s 51.81.0.0/16 -j DROP
-A INPUT -s 51.158.0.0/16 -j DROP

-A INPUT -s 52.228.0.0/16 -j DROP
-A INPUT -s 56.146.0.0/16 -j DROP

-A INPUT -s 62.171.0.0/16 -j DROP
-A INPUT -s 62.210.0.0/16 -j DROP

-A INPUT -s 64.227.0.0/16 -j DROP

-A INPUT -s 66.42.0.0/16 -j DROP
-A INPUT -s 66.63.0.0/16 -j DROP

-A INPUT -s 79.124.0.0/16 -j DROP
-A INPUT -s 79.110.0.0/16 -j DROP

-A INPUT -s 80.66.0.0/16 -j DROP

-A INPUT -s 81.17.0.0/16 -j DROP

-A INPUT -s 82.102.0.0/16 -j DROP
-A INPUT -s 82.126.0.0/16 -j DROP

-A INPUT -s 84.54.0.0/16 -j DROP
-A INPUT -s 84.239.16.0/24 -j DROP

-A INPUT -s 86.234.0.0/16 -j DROP

-A INPUT -s 87.236.0.0/16 -j DROP
-A INPUT -s 87.251.0.0/16 -j DROP

-A INPUT -s 89.168.0.0/16 -j DROP

-A INPUT -s 91.90.0.0/16 -j DROP
-A INPUT -s 91.92.0.0/16 -j DROP
-A INPUT -s 91.160.0.0/16 -j DROP
-A INPUT -s 91.207.0.0/16 -j DROP
-A INPUT -s 91.238.0.0/16 -j DROP

-A INPUT -s 94.41.0.0/16 -j DROP
-A INPUT -s 94.102.0.0/16 -j DROP
-A INPUT -s 94.156.0.0/16 -j DROP

-A INPUT -s 95.111.0.0/16 -j DROP

-A INPUT -s 103.56.0.0/16 -j DROP
-A INPUT -s 103.75.0.0/16 -j DROP
-A INPUT -s 103.136.0.0/16 -j DROP
-A INPUT -s 103.108.0.0/16 -j DROP
-A INPUT -s 103.216.0.0/16 -j DROP

-A INPUT -s 104.156.0.0/16 -j DROP
-A INPUT -s 104.248.0.0/16 -j DROP

-A INPUT -s 107.170.0.0/16 -j DROP

-A INPUT -s 109.74.0.0/16 -j DROP
-A INPUT -s 109.120.0.0/16 -j DROP
-A INPUT -s 109.123.0.0/16 -j DROP

-A INPUT -s 115.231.0.0/16 -j DROP

-A INPUT -s 118.212.0.0/16 -j DROP

-A INPUT -s 122.96.0.0/16 -j DROP

-A INPUT -s 128.203.0.0/16 -j DROP
-A INPUT -s 128.199.0.0/16 -j DROP

-A INPUT -s 129.80.0.0/16 -j DROP

-A INPUT -s 134.199.0.0/16 -j DROP

-A INPUT -s 135.125.0.0/16 -j DROP
-A INPUT -s 135.181.0.0/16 -j DROP
-A INPUT -s 135.237.0.0/16 -j DROP

-A INPUT -s 138.2.0.0/16 -j DROP

-A INPUT -s 141.98.0.0/16 -j DROP
-A INPUT -s 141.147.0.0/16 -j DROP

-A INPUT -s 146.70.0.0/16 -j DROP

-A INPUT -s 147.28.0.0/16 -j DROP
-A INPUT -s 147.185.0.0/16 -j DROP

-A INPUT -s 152.53.0.0/16 -j DROP

-A INPUT -s 155.248.0.0/16 -j DROP

-A INPUT -s 156.146.0.0/16 -j DROP
-A INPUT -s 156.253.0.0/16 -j DROP

-A INPUT -s 159.203.0.0/16 -j DROP

-A INPUT -s 162.243.0.0/16 -j DROP
-A INPUT -s 162.142.0.0/16 -j DROP

-A INPUT -s 167.94.0.0/16 -j DROP
-A INPUT -s 167.248.0.0/16 -j DROP

-A INPUT -s 168.138.0.0/16 -j DROP

-A INPUT -s 172.168.0.0/16 -j DROP
-A INPUT -s 172.169.0.0/16 -j DROP
-A INPUT -s 172.202.0.0/16 -j DROP
-A INPUT -s 172.212.0.0/16 -j DROP
-A INPUT -s 172.245.0.0/16 -j DROP

-A INPUT -s 176.65.0.0/16 -j DROP

-A INPUT -s 179.61.0.0/16 -j DROP

-A INPUT -s 185.65.0.0/16 -j DROP
-A INPUT -s 185.142.0.0/16 -j DROP
-A INPUT -s 185.165.0.0/16 -j DROP
-A INPUT -s 185.180.0.0/16 -j DROP
-A INPUT -s 185.195.0.0/16 -j DROP
-A INPUT -s 185.204.0.0/16 -j DROP
-A INPUT -s 185.213.0.0/16 -j DROP
-A INPUT -s 185.216.0.0/16 -j DROP
-A INPUT -s 185.242.0.0/16 -j DROP

-A INPUT -s 191.101.31.0/24 -j DROP
-A INPUT -s 191.101.217.0/24 -j DROP

-A INPUT -s 192.241.128.0/16 -j DROP

-A INPUT -s 193.25.0.0/16 -j DROP
-A INPUT -s 193.27.0.0/16 -j DROP
-A INPUT -s 193.32.0.0/16 -j DROP
-A INPUT -s 193.138.0.0/16 -j DROP

-A INPUT -s 194.127.0.0/16 -j DROP
-A INPUT -s 194.165.0.0/16 -j DROP

-A INPUT -s 195.154.0.0/16 -j DROP
-A INPUT -s 195.201.0.0/16 -j DROP

-A INPUT -s 198.54.0.0/16 -j DROP
-A INPUT -s 198.199.0.0/16 -j DROP
-A INPUT -s 198.235.0.0/16 -j DROP

-A INPUT -s 199.45.0.0/16 -j DROP
-A INPUT -s 199.58.0.0/16 -j DROP

-A INPUT -s 205.210.0.0/16 -j DROP

-A INPUT -s 206.168.0.0/16 -j DROP

-A INPUT -s 207.90.0.0/16 -j DROP

-A INPUT -s 212.70.0.0/16 -j DROP

-A INPUT -s 220.250.0.0/16 -j DROP

-A INPUT -s 221.213.0.0/16 -j DROP

-A INPUT -s 222.186.0.0/16 -j DROP

COMMIT
# Completed on Thu Apr 18 16:01:08 2024
